@@ -2387,6 +2387,7 @@ Mike Ketchen <mketchen at broadsoft dot com>
 Erik Sohns <erik dot sohns at web dot de>
 Winston Jenks <Winston dot JENKS at capesoftware dot com>
 Colin Shen <cshen at manh dot com>
+Alexey Zubko <alexey dot zubko at gmail dot com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
